--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>あなたのＨＰタイトル</title>
+<title>決闘ガール</title>
 <meta name="keywords" content="ページのキーワードA,B,C">
 <meta name="description" content="ページの説明">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,13 +25,6 @@
 </div>
 </main>
 <aside>
-<div id="middle-inner">
-<div class="side-title">menu</div>
-<div class="side">
-<ul>
-<li>記事ページへのリンク</li>
-<li>記事ページへのリンク</li>
-</ul>
 </div>
 </div>
 </aside>
