--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div id="outer">
-<header><div id="header-container"><div id="head-inner"><h1>あなたのＨＰタイトル</h1>
-<p class="description">あなたのＨＰの説明文</p></div></div>
+<header><div id="header-container"><div id="head-inner"><h1>決闘ガール</h1>
+<p class="description"></p></div></div>
 </header>
 <div id="content-wrapper">
 <main>
