--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>決闘ガール</title>
+<title>sumida</title>
 <meta name="keywords" content="ページのキーワードA,B,C">
 <meta name="description" content="ページの説明">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="outer">
-<header><div id="header-container"><div id="head-inner"><h1>決闘ガール</h1>
+<header><div id="header-container"><div id="head-inner"><h1>sumida</h1>
 <p class="description"></p></div></div>
 </header>
 <div id="content-wrapper">
